feat : JPQL 쿼리로 Inquiry API 등 성능 개선 및 테스트 코드 수정