@@ -9,6 +9,7 @@ import com.example.auth_spring.web.domain.category.CategoryRepository;
 import com.example.auth_spring.web.domain.subcategory.SubCategory;
 import com.example.auth_spring.web.domain.subcategory.SubCategoryRepository;
 import com.example.auth_spring.web.dto.subcategory.SubCategoryListResponseDto;
+import com.example.auth_spring.web.dto.subcategory.SubCategoryResponseDto;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -58,20 +59,31 @@ class SubCategoryInquiryServiceTest {
                 .name("맨투맨")
                 .build();
 
-        List<SubCategory> subCategoryList = Collections.singletonList(subCategory);
+//        List<SubCategory> subCategoryList = Collections.singletonList(subCategory);
+        List<SubCategoryResponseDto> subCategoryList = List.of(SubCategoryResponseDto.builder()
+                .subCategoryName(subCategory.getName())
+                        .build());
+
+        SubCategoryListResponseDto subCategoryListResponseDto1 = SubCategoryListResponseDto.builder()
+                .categoryName(category.getName())
+                        .subCategoryNameList(subCategoryList)
+                                .build();
 
         //given
         given(tokenService.findUserRole(bearerAccessToken)).willReturn(Role.ADMIN.getKey());
-        given(categoryRepository.findByName(category.getName())).willReturn(Optional.of(category));
-        given(subCategoryRepository.findAllByCategoryId(category.getId())).willReturn(subCategoryList);
-
+//        given(categoryRepository.findByName(category.getName())).willReturn(Optional.of(category));
+//        given(subCategoryRepository.findAllByCategoryId(category.getId())).willReturn(subCategoryList);
+        given(subCategoryRepository.findSubCategoryListByCategoryName(any())).willReturn(subCategoryList);
         //when
         SubCategoryListResponseDto subCategoryListResponseDto = subCategoryInquiryService.subCategoryList(bearerAccessToken, category.getName());
 
         //then
-        assertThat(subCategoryListResponseDto.getCategoryName()).isEqualTo(subCategoryList.get(0).getCategory().getName());
+//        assertThat(subCategoryListResponseDto.getCategoryName()).isEqualTo(subCategoryList.get(0).get().getName());
+//        assertThat(subCategoryListResponseDto.getSubCategoryNameList().get(0).getSubCategoryName())
+//                .isEqualTo(subCategoryList.get(0).getName());
+        assertThat(subCategoryListResponseDto.getCategoryName()).isEqualTo(subCategoryListResponseDto1.getCategoryName());
         assertThat(subCategoryListResponseDto.getSubCategoryNameList().get(0).getSubCategoryName())
-                .isEqualTo(subCategoryList.get(0).getName());
+                .isEqualTo(subCategoryListResponseDto1.getSubCategoryNameList().get(0).getSubCategoryName());
     }
 
 }
